[package]
name = "cram"
version = "0.1.0"
authors = ["Portuguese anecdote Developers"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.com/ram-project/ram/"
categories = ["communication", "middleware","distributed-systems"]
description = "Cram realy awesome middleware"

[dependencies]
zmq = "0.8"
crossbeam = "0.7"
threadpool = "1.7.1"
queue = "0.3.0"